force-app/main/default/objects/Campaign/fields/EcomailCampaignId__c.field-meta.xml
<CustomField>
    <fullName>EcomailCampaignId__c</fullName>
    <label>Ecomail Campaign Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>