force-app/main/default/objects/Campaign/fields/EcomailListId__c.field-meta.xml
<CustomField>
    <fullName>EcomailListId__c</fullName>
    <externalId>true</externalId>
    <label>Ecomail List Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>