force-app/main/default/objects/Campaign/fields/EcomailStatsBounce__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsBounce__c</fullName>
    <label>Ecomail Stats Bounce</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>