force-app/main/default/objects/Campaign/fields/EcomailStatsBounceRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsBounceRate__c</fullName>
    <label>Ecomail Stats Bounce Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>