force-app/main/default/objects/Campaign/fields/EcomailStatsClick__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsClick__c</fullName>
    <label>Ecomail Stats Click</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>