force-app/main/default/objects/Campaign/fields/EcomailStatsClickRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsClickRate__c</fullName>
    <label>Ecomail Stats Click Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>