force-app/main/default/objects/Campaign/fields/EcomailStatsConversions__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsConversions__c</fullName>
    <label>Ecomail Stats Conversions</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>