force-app/main/default/objects/Campaign/fields/EcomailStatsConversionsValue__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsConversionsValue__c</fullName>
    <label>Ecomail Stats Conversions Value</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>