force-app/main/default/objects/Campaign/fields/EcomailStatsDelivery__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsDelivery__c</fullName>
    <label>Ecomail Delivery Delivery</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>