force-app/main/default/objects/Campaign/fields/EcomailStatsDeliveryRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsDeliveryRate__c</fullName>
    <label>Ecomail Delivery Delivery Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>