force-app/main/default/objects/Campaign/fields/EcomailStatsInject__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsInject__c</fullName>
    <label>Ecomail Stats Inject</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>