force-app/main/default/objects/Campaign/fields/EcomailStatsOpen__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsOpen__c</fullName>
    <label>Ecomail Stats Open</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>