force-app/main/default/objects/Campaign/fields/EcomailStatsOpenRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsOpenRate__c</fullName>
    <label>Ecomail Stats Open Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>