force-app/main/default/objects/Campaign/fields/EcomailStatsSpam__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsSpam__c</fullName>
    <label>Ecomail Stats Spam</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>