force-app/main/default/objects/Campaign/fields/EcomailStatsSpamRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsSpamRate__c</fullName>
    <label>Ecomail Stats Spam Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>