force-app/main/default/objects/Campaign/fields/EcomailStatsTotalClick__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsTotalClick__c</fullName>
    <label>Ecomail Stats Total Click</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>