force-app/main/default/objects/Campaign/fields/EcomailStatsUnsub__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsUnsub__c</fullName>
    <label>Ecomail Stats Unsub</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>