force-app/main/default/objects/Campaign/fields/EcomailStatsUnsubRate__c.field-meta.xml
<CustomField>
    <fullName>EcomailStatsUnsubRate__c</fullName>
    <label>Ecomail Stats Unsub Rate</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>