force-app/main/default/objects/Campaign/fields/EcomailSync__c.field-meta.xml
<CustomField>
    <fullName>EcomailSync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Synchronize to Ecomail if checked</description>
    <label>Ecomail Sync</label>
    <type>Checkbox</type>
</CustomField>